app/static/css/global.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Open+Sans:wght@400;500;600;700;800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  overflow-x: hidden;
}

.post-content p {
  width: 95%;
  max-width: 800px;
  margin: 20px auto;
  font-size: 1.2rem;
}

.post-content code {
  font-size: 1rem;
  color: #475569;
  width: 95%;
  max-width: 700px;
  margin-inline: auto;
  display: block;
  text-wrap: wrap;
  text-align: center;
}

.post-view img {
  object-fit: cover;
  max-height: 100vh;
  margin-inline: auto;
  display: inline;
  height: 100%;
  width: 100%;
}

swiper-container .swiper-pagination-bullets {
  bottom: -15px !important;
}

@media (max-width: 768px) {
  .post-content p {
    font-size: 1rem;
  }
  .post-content code {
    font-size: 0.7rem;
  }
}

@media (max-width: 640px) {
  .post-content p {
    font-size: 0.9rem;
  }
}

@layer base {
  h1{
    @apply font-[600] text-2xl md:text-xl;
  }
  h2 {
    @apply text-xl lg:text-[18px] sm:text-[14px] font-[600] sm:leading-5 dark:text-white;
  }
  h3 {
    @apply text-4xl lg:text-3xl md:text-2xl sm:text-xl font-[600] font-playfair w-11/12 max-w-[500px] mx-auto tracking-[3px] leading-[60px] my-8 dark:text-white;
  }
  /* h2 {
    @apply w-11/12 max-w-[400px] text-3xl font-[600] mx-auto my-6 text-center leading-10 dark:text-white;
  } */
  h4 {
    @apply text-lg font-[600] dark:text-white;
  }
  p {
    @apply dark:text-white;
  }
  .active-link {
    @apply text-white bg-blue-800 w-[30px] h-[30px] border inline-flex justify-center items-center rounded-full;
  }
  .logo {
    @apply text-[50px] lg:text-[35px] font-[600] text-center tracking-[3px] font-playfair text-red-600 bg-clip-text bg-gradient-to-l text-transparent from-red-800 via-red-600 to-blue-600;
  }
  .badge-review {
    @apply bg-blue-100 dark:bg-blue-800 text-blue-800 dark:text-blue-100 text-xs font-medium mr-2 px-2.5 py-0.5 rounded border border-blue-400;
  }

  .badge-thoughts {
    @apply bg-purple-100 dark:bg-purple-800 text-purple-800 dark:text-purple-100 text-xs font-medium mr-2 px-2.5 py-0.5 rounded border border-purple-400;
  }

  .badge-critique {
    @apply bg-red-100 dark:bg-red-800 text-red-800 dark:text-red-100 text-xs font-medium mr-2 px-2.5 py-0.5 rounded border border-red-400;
  }
  .nav-btn {
    @apply lg:shadow-md lg:rounded-md lg:border-2 bg-white lg:border-black dark:bg-dark text-dark dark:border-white;
  }
  .lazy-img {
    @apply opacity-0 transition-all ease-in-out duration-500;
  }
  .fade {
    @apply opacity-100 transition-all ease-in-out duration-500;
  }
  .post-content code {
    @apply dark:text-white;
  }
  .fixed-theme-btn {
    @apply fixed top-5 z-50;
  }
}

